--- a/Client/src/style/style.css
+++ b/Client/src/style/style.css
@@ -13,6 +13,7 @@
     position: sticky;
     top: 0;
     z-index: 100;
+    height: fit;
 }
 .search__icon{
     background-color: #cd9042;
@@ -38,6 +39,7 @@
     justify-content: space-evenly;
     height: 30px;
     width: 40%;
+    margin: 10px;
 }
 .header__link{
     color: white;
@@ -289,6 +291,10 @@
     }
     .home__banner{
         margin-bottom: 0px;
+    }
+    .header {
+        flex-direction: column;
+        padding: 25px;
     }
 }
 
